# ff2

./: Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: decorators.py  middleware.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_status_creator.py  0003_alter_status_name.py  0004_alter_status_options_alter_status_created_at_and_more.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_creator_alter_task_performer_and_more.py  0003_task_description.py  0004_alter_task_description.py  0005_alter_task_description.py  0006_alter_task_description.py  0007_alter_task_performer.py  0008_alter_task_performer.py  0009_alter_task_performer.py  0010_task_labels.py  0011_alter_task_description_alter_task_labels.py  0012_alter_task_labels.py  0013_alter_task_labels.py  0014_alter_task_creator.py  0015_remove_task_performer_task_executor.py
task_manager/templates/: index.html  layout.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/registration/: login.html
task_manager/templatetags/: task_tags.py
task_manager/users/: forms.py  tests.py  urls.py  views.py
(+21 files in other folders)
